# ecs-sandbox

./: .env.example  .env.project  .env.vault  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  jig.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
.claude/: settings.json
.claude/commands/: check.md  docs.md
.claude/skills/check/: SKILL.md
.claude/skills/draft/: SKILL.md
.claude/skills/jig/: SKILL.md
.claude/skills/spawn/: SKILL.md
.github/workflows/: cd.yml  ci.yml  terraform-plan.yml
.jig/hooks/: hooks.json
apps/dev-cli/: Makefile  pyproject.toml
apps/dev-cli/src/dev_cli/: main.py
apps/dev-cli/src/dev_cli/agent/: deps.py  spec.py
apps/dev-cli/src/dev_cli/tools/: sandbox_exec.py  sandbox_exec_sync.py  sandbox_fs.py  sandbox_session.py
apps/ecs-sandbox/: Dockerfile  Makefile  package.json  pyproject.toml
apps/ecs-sandbox-agent/: Dockerfile  Makefile  agent.py  package.json  pyproject.toml
apps/ecs-sandbox-agent/src/ecs_sandbox_agent/: agent.py
apps/ecs-sandbox/src/: __main__.py  config.py  server.py  types.py
apps/ecs-sandbox/src/db/: connection.py  queries.py
apps/ecs-sandbox/src/db/migrations/: 001_initial.sql
apps/ecs-sandbox/src/middleware/: auth.py
apps/ecs-sandbox/src/routers/: _deps.py  fs.py  git.py  sandbox.py  web.py
apps/ecs-sandbox/src/services/: _context.py  cleanup.py  docker_manager.py  session.py  worker.py
apps/ecs-sandbox/src/static/: index.html  terminal.css  terminal.js
apps/ecs-sandbox/src/storage/: efs.py  s3.py
apps/ecs-sandbox/src/tasks/: cron.py  deps.py
apps/ecs-sandbox/src/tasks/jobs/: __init__.py  cleanup.py
config/envs/: development.env  production.env
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  LOCAL_DEV.md  PATTERNS.md  PROJECT_LAYOUT.md  SUCCESS_CRITERIA.md  index.md  sandbox-agent.md
iac/: .gitignore  README.md
iac/envs/common/: main.tf  outputs.tf  variables.tf
iac/envs/ecr/: main.tf  terraform.tf
iac/envs/production/: main.tf  terraform.tf
iac/envs/staging/: main.tf  outputs.tf  terraform.tf
iac/modules/aws/: main.tf  outputs.tf  variables.tf
issues/chores/: cleanup-stale-sessions-on-startup.md
issues/epics/persistent-terminal-sessions/: 0-track-cwd.md  1-pty-sessions.md  index.md
issues/features/: hot-rebuild-agent.md  prefill-token-from-url.md  worktree-parallel-dev.md
(+21 files in other folders)
