[project]
name = "dev-cli"
version = "0.1.0"
description = "Development CLI for testing the ecs-sandbox via a simple AI agent"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=0.1,<1",
    "ecs-sandbox-client",
    "httpx>=0.27,<1",
    "rich>=13,<14",
    "click>=8,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dev_cli"]

[project.scripts]
dev-cli = "dev_cli.main:cli"
