[project]
name = "ecs-sandbox-agent"
version = "0.1.0"
description = "Sidecar agent that runs inside each sandbox container"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "black",
    "ruff",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecs_sandbox_agent"]
